objects/Account_Contracts__c.object
<CustomObject>
    <description>Salesdriver Link table</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N40000001le5tEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Binder__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SAWebServer__c &amp; &quot;/&quot; &amp; $Setup.CustomSettings__c.SAPortal__c &amp; &quot;/&quot; &amp; &quot;WebSDR_Data/Contracts/&quot; &amp; TRIM(TEXT(FLOOR((VALUE(Proposal_ID__c) / 1000)) * 1000)) &amp; &quot;/&quot; &amp; Filename__c, Filename__c )</formula>
        <label>Contract Binder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Description_del__c</fullName>
        <label>Contract Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Edit__c</fullName>
        <formula>hyperlink( &quot;http://&quot; &amp; $Setup.CustomSettings__c.SAWebServer__c &amp; &quot;/&quot; &amp; $Setup.CustomSettings__c.SAPortal__c &amp; &quot;/&quot;  &amp; &quot;WebSDR_Main.asp?UserID=&quot; &amp; $User.Id &amp; &quot;&amp;ProposalID=&quot;  &amp; Proposal_ID__c,  Contract_Description_del__c, &quot;_blank&quot;)</formula>
        <label>Contract Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Contract__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SAWebServer__c &amp; &quot;/&quot; &amp; $Setup.CustomSettings__c.SAPortal__c &amp; &quot;/&quot; &amp; &quot;WEBSDR_Main.asp?UserID=&quot; &amp;  $User.Id  &amp;&quot;&amp;OpportunityID=&quot; &amp; Opportunity__r.Id, &quot;Create Contract&quot;, &quot;_blank&quot;)</formula>
        <label>Create Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Create_Date__c</fullName>
        <label>File Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_File_Update__c</fullName>
        <label>Last File Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Contracts</relationshipLabel>
        <relationshipName>R00N40000001leAMEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Proposal ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLX_AcctContract_CreateDate__c</fullName>
        <label>SLX AcctContract CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_AcctContract_ID__c</fullName>
        <label>SLX AcctContract ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Account Contract</label>
    <nameField>
        <label>Proposal ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>